--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                         <input type="text" class="form-control mb-3" id="inpuPostalCode" required>
                     </div>
 
-                    <div class="col-12 d-flex justify-content-between">
-                        <div class="mb-3  ">
+                    <div class="row">
+                        <div class="mb-3 col-auto">
                             <label class="form-label">We Accept</label>
                             <div class="d-flex justify-content-between text-white gap-2 bg-secondary p-2 rounded">
                                 <div class="form-check">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
 
-                        <div class=" col-md-6">
+                        <div class=" col-md-6 col-12 ms-auto">
                             <label class="form-label">Message</label>
                             <div class=""></div>
                             <div class="form-floating">
