--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="mb-3 col-auto">
+                        <div class="mb-3 col-12 col-md-6">
                             <label class="form-label">We Accept</label>
                             <div class="d-flex justify-content-between text-white gap-2 bg-secondary p-2 rounded">
                                 <div class="form-check">
